--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <script>
 //autocomplete(document.getElementById("guess"), names);
 </script> 
-<form autocomplete="off"><div id="autocomplete"><input id="guess" type="text"/></div></form><br/>
+<form autocomplete="off"><div id="autocomplete"><input id="guess" type="text"/></div></form> <div id="stats" onclick="showStats()" hidden>📊</div><br/>
 <table id = "guesses"><tr><th>Player</th><th>POS</th><th>Last Season</th><th>Class</th><th>Height</th><th>Number</th></tr></table>
 <div class = "modal" id="pop"><div id="res" hidden><span onclick="byebye()" class="close">&times;</span></div></div>
 </body>
