stylistic changes, expanded share function

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head><title>DEVIL: A Duke Wordle Game</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 <link rel="stylesheet" href="style.css"/></head>
 <body>
 <script src="script.js"></script>
  <script>
 //autocomplete(document.getElementById("guess"), names);
 </script> 
-<form autocomplete="off"><div id="autocomplete"><input id="guess" type="text"/></div></form> <div id="stats" onclick="showStats()" hidden>📊</div><br/>
+<form autocomplete="off"><div id="autocomplete"><input id="guess" type="text"/></div></form> <div id="stats" onclick="showStats()" hidden></div><br/>
 <table id = "guesses"><tr><th>Player</th><th>POS</th><th>Last Season</th><th>Class</th><th>Height</th><th>Number</th></tr></table>
 <div class = "modal" id="pop"><div id="res" hidden><span onclick="byebye()" class="close">&times;</span></div></div>
 </body>
