--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </script> 
 <form autocomplete="off"><div id="autocomplete"><input id="guess" type="text"/></div></form> <div id="stats" onclick="showStats()" hidden></div><br/>
 <table id = "guesses"><tr><th>Player</th><th>POS</th><th>Last Season</th><th>Class</th><th>Height</th><th>Number</th></tr></table>
-<div class = "modal" id="pop"><div id="res" hidden><span onclick="byebye()" class="close">&times;</span></div></div>
+<div class = "modal" id="pop"><div id="res" class="hid" hidden><span onclick="byebye()" class="close">&times;</span></div></div>
 </body>
 </html>
